2001-11-26 Christoph Cullmann <cullmann@kde.org>
  * backspace bug fixed
  * more cleanups in doc/view

2001-11-24 Christoph Cullmann <cullmann@kde.org>
  * the docID is now called documentNumber and is in the KTextEditor lib ;)
  * new print and mark interfaces ;)
  * bugfixes for some stuff in kateview/document.*
  * move more of the document stuff from the view to the document
    (old kwritedoc/view was very mixed, no real seperation, but that should be nearly done)

2001-11-17 Christoph Cullmann <cullmann@kde.org>
  * new selection code (bit buggy at the moment, but better than the old way
    of storing the selection in the attributes

2001-10-29 Joseph Wenninger <jowenn@kde.org>
  * Highlighting definitions support now #stay and #pop as context values
  * Some highlighting definitions ported

2001-10-27 Christoph Cullmann <cullmann@kde.org>
  * undo/redo works now without errors
  * fix many memleaks + some crashs in buffer + hl
  * fix ctx managment (almost)

2001-10-27 Joseph Wenninger <jowenn@kde.org
  * Highlighting isn't updated completely yet (should be fixed now), but uses:
  * I have to do some nasty workaround because the overloaded ==
    operator in QMemArray crashes, if one or both of the arrays has
    a size of 0 (I think this is a bug in QT, but it could be that
    this is intended behaviour. Who knows ?)

2001-10-26 Joseph Wenninger <jowenn@kde.org>
  * The stacked highlighting shoul almost work now.
    Using old description files it will use quite a lot memory, but
    they should work.
    Problems:
  * It's leaking like a sieve on destruction, because the
    memarrays aren't deleted correctly yet (They need to be pointers and not
    references, otherwise there are out of memory errors in qgarray)
  * Highlighting isn't updated completely yet
  * I have to do some nasty workaround because the overloaded ==
    operator in QMemArray crashes, if one or both of the arrays has