@@ -1,3 +1,13 @@
+2001-11-30 Joseph Wenninger <jowenn@kde.org>
+  * I hopefully fixed the CSS highlighting finally. It used
+	deprecated syntax and there was a bug in the highlighting code, 
+ 	for handling weakDeliminiators. Who renamed them, once they where 
+	called weakDelimiters, which I think is the correct pronounciation.
+
+2001-11-29 Joseph Wenninger <jowenn@kde.org>
+  * KWrite/Kate use different font settings for printing and viewing now
+  * Fixed a small crash in my kdevelop->kate port of the codecompletion interface
+
 2001-11-26 Christoph Cullmann <cullmann@kde.org>
   * backspace bug fixed
   * more cleanups in doc/view
